src/objects/Expense_Form__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Volunteer_Role__r.Applicant__r.FirstName + &quot; &quot; + Volunteer_Role__r.Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Expense_Form__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager__c</fullName>
        <formula>Volunteer_Role__r.Volunteer_Manager__r.User_Fullname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <label>Volunteer Role</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Expense Forms</relationshipLabel>
        <relationshipName>Expense_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Name__c</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Expense_Forms</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Expense Forms</label>
    </listViews>
    <nameField>
        <displayFormat>EXPENSE FORM-{00000}</displayFormat>
        <label>Expense Form No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>